fbstyles.css
/* ... */
.modal-backdrop {
    position: fixed;
    top: 0;
    right: 0;
    bottom: 0;
    left: 0;
    z-index: 1040;
    background-color: #000
}

.modal-backdrop.fade {
    filter: alpha(opacity=0);
    opacity: 0
}

.modal-backdrop.in {
    filter: alpha(opacity=50);
    opacity: .5
}

.modal-header {
    margin: 0;
    padding: .4em;
    text-align: center;
    font-size: 2.4em;
    font-weight: 300;
    opacity: .8;
    background: rgba(0, 0, 0, .2);
    border-radius: 3px 3px 0 0
}

.modal-header.close {
    margin-top: -2px
}

.modal-header>h3 {
    margin: 0;
    padding: 0
}

.modal-body {
    padding: 15px 40px 30px;
    margin: 0;
    font-weight: 300;
    font-size: 1.15em
}

.modal-footer {
    margin: 0;
    padding: .4em;
    text-align: center;
    font-weight: 300;
    opacity: .8;
    background: rgba(0, 0, 0, .2);
    border-radius: 3px 3px 0 0
}

.modal-footer button {
    margin: 5px 0
}

.modal-scrollbar-measure {
    position: absolute;
    top: -9999px;
    width: 50px;
    height: 50px;
    overflow: scroll
}

.video-container {
    position: relative;
    padding-bottom: 56.25%;
    padding-top: 30px;
    height: 0;
    overflow: hidden
}

.video-container embed, .video-container iframe, .video-container object {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%
}

.inline-tabs, .inline-tabs li {margin: 0 0 25px;-webkit-padding-start: 0;/* border-bottom: 1px dashed #A4A4A4; */list-style-type: none;}

@media screen and (min-width:481px) {
    .inline-tabs li {
        display: inline-block;
        margin: 0 5px 0 0;
        border: 0;
    }
}

.inline-tabs li a {
    display: block;
    font-weight: 700;
    padding: 13px 36px;
    background: rgb(245, 245, 245);
    color: #535353;
}

.inline-tabs li a.active {
    background: #2D5BA9;
    color: #fff;
}

.inline-tabs li a.active:hover {
    background: #2D5BA9;
    color: #fff;
}

.inline-tabs li a:hover {
    text-decoration: none;
    background: #e0e0e0;
    color: #fff;
}

.text-muted {
    font-weight: 700;
}

.tt-menu {
    position: absolute;
    background: #fff;
    color: inherit;
    top: 100%;
    left: 0;
    z-index: 100;
    display: block;
    right: 10%
}

@media (min-width:640px) {
    .tt-menu {
        right: 25%
    }
}

.tt-menu h2 {
    border-left: 1px solid;
    border-right: 1px solid;
    margin: 0;
    padding: 10px 15px
}

.tt-suggestion {
    border-bottom: 1px dashed #A4A4A4
}

.tt-suggestion.tt-cursor a {
    background-color: #F8F8F8;
    color: #4c4c4c
}

 .tt-suggestions a {
    padding: 10px 15px;
    box-sizing: border-box;
    width: 100%;
    display: block;
    background-color: #fff;
    color: #4c4c4c;
    text-decoration: none
}

 .tt-suggestions a:active, .tt-suggestions a:focus, .tt-suggestions a:hover {
    outline: 0;
    background-color: #F8F8F8;
    border-color: #4c4c4c
}


.fb-published_date {
    padding-bottom: 14px;
    font-size: 14px;
    font-weight: 700;
    color: #2D5BA9
}


form.clearfix span.twitter-typeahead {
    width: 90%
}

@media (min-width:640px) {
    .twitter-typeahead {
        width: 90%
    }
}

.twitter-typeahead .tt-menu {
    right: 0!important
}

@media (min-width:640px) {
    .twitter-typeahead .tt-menu {
        right: 0!important
    }
}
@media (max-width:739px) {
  .fb-result__image {display:none;}
  .fb-result__info.with-image {width:100%;}
}

@media (max-width:669px) {
  .inline-tabs li {
    display: inline-block;
    margin-bottom: .5em;
    text-align: center;
    padding: 0 3px;
    width: 47%;
  }

  .inline-tabs li a {
    padding: 12px 12px;
  }
  .inline-tabs {display:inline-block;text-align:center;margin:0 0 10px;width:100%}
  .fb-message {padding-bottom:0;}
}

@media (max-width:1200px) {
  .search h1 {
    font-size: 52px;
  }
}

